package(default_visibility = ["//visibility:public"])
load("//:copts.bzl", "LEVELDB_FLAGS")

cc_test(
  name = "db_bench",
  srcs = glob(["db_bench.cc"]),
  deps = [
    "//include/leveldb",
    "//db:db_lib",
    "@com_google_googletest//:gtest_main",
    "@com_google_benchmark//:benchmark_main",
  ],
  copts = LEVELDB_FLAGS,
)


cc_test(
  name = "db_bench_sqlite3",
  srcs = glob(["db_bench_sqlite3.cc"]),
  deps = [
    "//include/leveldb",
    "//db:db_lib",
    "@com_google_googletest//:gtest_main",
    "@com_google_benchmark//:benchmark_main",
  ],
  copts = LEVELDB_FLAGS,
  linkopts = [
    "-lsqlite3",
  ],
)

cc_test(
  name = "db_bench_log",
  srcs = glob(["db_bench_log.cc"]),
  deps = [
    "//include/leveldb",
    "//db:db_lib",
    "@com_google_googletest//:gtest_main",
    "@com_google_benchmark//:benchmark_main",
  ],
  copts = LEVELDB_FLAGS,
)
